-- liquibase formatted sql

--changeset vlmb:003-create-tests
CREATE TABLE tests (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    test_name VARCHAR(255) NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(),
    dialog_id BIGINT NOT NULL,
    CONSTRAINT fk_tests_dialog FOREIGN KEY (dialog_id) REFERENCES dialogs (id) ON DELETE CASCADE
);

CREATE TABLE test_questions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    question TEXT NOT NULL,
    variants JSONB NOT NULL,
    gold_answer TEXT NOT NULL,
    question_order INTEGER NOT NULL,
    test_id BIGINT NOT NULL,
    CONSTRAINT fk_test_questions_test FOREIGN KEY (test_id) REFERENCES tests (id) ON DELETE CASCADE,
    CONSTRAINT chk_test_questions_variants_is_array CHECK (jsonb_typeof(variants) = 'array'),
    CONSTRAINT chk_test_questions_variants_not_empty CHECK (jsonb_array_length(variants) > 0),
    CONSTRAINT chk_test_questions_question_order_positive CHECK (question_order > 0),
    CONSTRAINT uq_test_questions_test_id_question_order UNIQUE (test_id, question_order)
);

CREATE INDEX idx_tests_dialog_id_created_at ON tests (dialog_id, created_at DESC);
